# kind

./: .gitignore  Makefile  README.md  base.sh  brew.sh  load_data.ipynb  load_data_stream.ipynb  pyproject.toml
app/: clickhouse.sh  harbor.sh  headlamp.sh  istio.sh  metallb.sh  metrics.sh  portainer.sh  pull_images.sh  starrocks.sh
cni/: calico.sh  cilium.sh  flannel.sh
