[project]
name = "kind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pymupdf>=1.27.1",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "starrocks>=1.3.3",
]
